security.tf
# SG para el Load Balancer (Público)
resource "aws_security_group" "alb_sg" {
  name        = "alb-sg-examen"
  description = "Permitir trafico HTTP desde internet"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# SG para Microservicios (Privado)
resource "aws_security_group" "app_sg" {
  name        = "app-sg-examen"
  description = "Solo permite trafico desde el Load Balancer"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port       = 8080 # Puerto tipico de Java/Spring
    to_port         = 8080
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id] # <--- ¡ESTO DA PUNTOS!
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
